public/css/sidebar.css
.sidebar {
    min-width: 22rem;
    width: 22rem;
}

.step-vertical {
    display: flex;
    align-items: center;
    position: relative;
    padding-bottom: 30px;
}

/* Vertical Line */
.step-vertical:not(:last-child)::before {
    content: "";
    position: absolute;
    left: 19px;
    top: 40px;
    width: 2px;
    height: calc(100% - 30px);
}

.complete::before,
.active::before {
    background-color: #0D6EFD;
}

.to-do::before {
    background-color: #6c757d;
}

/* Step Icon Container */
.step-vertical-icon {
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    z-index: 2;
}

.complete .step-vertical-icon {
    background-color: #0D6EFD;
    color: white;
}

.active .step-vertical-icon img {
    height: 40px;
}

/* Content alignment */
.step-vertical-content {
    margin-left: 15px;
}

.step-vertical-content h4 {
    margin-bottom: 5px;
    font-size: 1.1rem;
}

.step-vertical-content p {
    color: #6c757d;
    margin-bottom: 0;
}

